--- a/Documentation.html
+++ b/Documentation.html
@@ -524,404 +524,19 @@
           </div>
         </div>
       </section>
+      
+
 
       <section class="feedBack" id="feedBack">
-        <div class="form">
-          <h1 id="feedBack">Feedback and Suggestions</h1>
+        <footer>
 
-          <p class="note">
-            This Client Satisfaction Measurement (CSM) tracks the customer
-            experience of goverment offices. Your feedback on your recently
-            concluded transaction will help this office provide a better
-            service. Personal information shared will be kept confidential and
-            you always have the option to not answer this form.
-          </p>
-          <div class="bodyForm">
-            <div class="boxForm">
-              <p>Client Type:</p>
-              <select name="Client" id="">
-                <option value="">Citizen</option>
-                <option value="">Business</option>
-                <option value="">
-                  Government (Employee or another agency)
-                </option>
-              </select>
-            </div>
-            <div class="boxForm">
-              <p>Date</p>
-              <input type="date" name="" id="" placeholder="Date" />
-            </div>
-            <div class="boxForm">
-              <p>Name (optional)</p>
-              <input type="text" name="" id="" placeholder="Juan Dela Cruz" />
-            </div>
-            <div class="boxForm">
-              <p>Sex:</p>
-              <select name="gender" id="">
-                <option value="">Male</option>
-                <option value="">Female</option>
-              </select>
-            </div>
-            <div class="boxForm">
-              <p>Age:</p>
-              <input type="number" name="" id="" placeholder="" />
-            </div>
-            <div class="boxForm">
-              <p>Region of residence</p>
-              <input
-                type="text"
-                name=""
-                id=""
-                placeholder="Region of Residents"
-              />
-            </div>
-            <div class="boxForm">
-              <p>Citizens Charter Service Availed</p>
-              <input type="text" name="" id="" placeholder="" />
-            </div>
-            <div class="boxForm">
-              <p>Type of Transaction:</p>
-              <select name="gender" id="">
-                <option value="">Assessment and Certification</option>
-                <option value="">Program Registration</option>
-                <option value="">Training</option>
-                <option value="">Scholarships</option>
-                <option value="">Administrative</option>
-                <option value="">Others</option>
-              </select>
-            </div>
-            <div class="boxForm">
-              <p>Type of Transaction:</p>
-              <select name="Transaction" id="">
-                <option value="">Assessment and Certification</option>
-                <option value="">Program Registration</option>
-                <option value="">Training</option>
-                <option value="">Scholarships</option>
-                <option value="">Administrative</option>
-                <option value="">Others</option>
-              </select>
-            </div>
-            <div class="instruction">
-              <p>
-                INSTRUCTION: <b>Select</b> your answer to the Citizen's Charter
-                (CC) questions. The Citizen's Charter is an official document
-                that reflects the services of a government agency/office
-                including its requirements, fees, and processing times among
-                others.
-              </p>
-            </div>
-            <div class="CCq1">
-              <p>
-                CC1: Which of the following best describes your awareness of a
-                CC?
-              </p>
-              <select name="q1" id="">
-                <option value="">
-                  1. I know what a CC is and I saw this office's CC
-                </option>
-                <option value="">
-                  2. I know what a CC is but I did NOT see this office's CC.
-                </option>
-                <option value="">
-                  3. 1 learned of the CC only when I saw this office's CC.
-                </option>
-                <option value="">
-                  4. I do not know what a CC is and I did not see one in this
-                  office. (Answer "N/A' on CC2 and CC3)
-                </option>
-              </select>
-            </div>
-            <div class="CCq2">
-              <p>
-                CC2: If aware of CC (answered 1-3 in CC1), would you say that
-                the CC of this office was ...?
-              </p>
-              <select name="q1" id="">
-                <option value="">1. Easy to see</option>
-                <option value="">2. Somewhat easy to see</option>
-                <option value="">3. Difficult to see</option>
-                <option value="">4. Not visible at all</option>
-                <option value="">5. N/A</option>
-              </select>
-            </div>
-            <div class="CCq3">
-              <p>
-                CC3: If aware of CC (answered codes 1-3 in CC1), how much did
-                the CC help you in your transaction?
-              </p>
-              <select name="q1" id="">
-                <option value="">1. Helped very much</option>
-                <option value="">2. Somewhat helped</option>
-                <option value="">3. Did not help</option>
-                <option value="">4. N/A</option>
-              </select>
-            </div>
-          </div>
-
-          <div class="sqdSection">
-            <div class="header">
-              <div></div>
-              <div class="rate">
-                <div class="stronglydisagree">
-                  <p>Strongly Disagree</p>
-                </div>
-                <div class="stronglydisagree">
-                  <p>Disagree</p>
-                </div>
-                <div class="stronglydisagree">
-                  <p>
-                    Neither Agree <br />
-                    nor Disagree
-                  </p>
-                </div>
-                <div class="stronglydisagree">
-                  <p>Agree</p>
-                </div>
-                <div class="stronglydisagree">
-                  <p>Agree</p>
-                </div>
-              </div>
-            </div>
-            <div class="question">
-              <p>
-                <b>Service Quality Dimension 0.</b> I am satisfied with the
-                service that I availed.
-              </p>
-              <div class="rate">
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/face-worried.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/sad.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/meh.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/smile.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/grin.svg  " alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="question">
-              <p class="sqd">
-                <b>Service Quality Dimension 1.</b> I spent reasonable amount of
-                time for my transaction.
-              </p>
-              <div class="rate">
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/face-worried.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/sad.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/meh.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/smile.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/grin.svg  " alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="question">
-              <p class="sqd">
-                <b>Service Quality Dimension 2.</b> The office followed the
-                transaction's requirements and steps based on the information
-                provided.
-              </p>
-              <div class="rate">
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/face-worried.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/sad.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/meh.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/smile.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/grin.svg  " alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="question">
-              <p class="sqd">
-                <b>Service Quality Dimension 3.</b> The steps (including
-                payment) I needed to do for my transaction were easy and simple.
-              </p>
-              <div class="rate">
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/face-worried.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/sad.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/meh.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/smile.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/grin.svg  " alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="question">
-              <p class="sqd">
-                <b>Service Quality Dimension 4.</b> The steps (including
-                payment) I needed to do for my transaction were easy and simple.
-              </p>
-              <div class="rate">
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/face-worried.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/sad.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/meh.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/smile.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/grin.svg  " alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="question">
-              <p class="sqd">
-                <b>Service Quality Dimension 5.</b> I paid a reasonable amount
-                of fees for my transaction. (If service was free, mark the N/A
-                column)
-              </p>
-              <div class="rate">
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/face-worried.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/sad.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/meh.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/smile.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/grin.svg  " alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="question">
-              <p class="sqd">
-                <b>Service Quality Dimension 6.</b>I feel the office was fair to
-                everyone, or "walang palakasan", during my transaction.
-              </p>
-              <div class="rate">
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/face-worried.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/sad.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/meh.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/smile.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/grin.svg  " alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="question">
-              <p class="sqd">
-                <b>Service Quality Dimension 7.</b> I was treated courteously by
-                the staff, and (if asked for help) the staff was helpful.
-              </p>
-              <div class="rate">
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/face-worried.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/sad.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/meh.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/smile.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/grin.svg  " alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="question">
-              <p class="sqd">
-                <b>Service Quality Dimension 8. </b> I got what l needed from
-                the government office, or (if denied) denial of request was
-                sufficiently explained to me.
-              </p>
-              <div class="rate">
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/face-worried.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/sad.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/meh.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/smile.svg" alt="" />
-                </div>
-                <div class="stronglydisagree">
-                  <img src="assets/images/Icons/grin.svg  " alt="" />
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="fdbckFooter">
-            <div class="footerFill">
-              <div class="suggest">
-                <p>
-                  Suggestions on how we can further improve our services
-                  (optional)
-                </p>
-
-                <textarea
-                  name=""
-                  id=""
-                  placeholder="Write your feedBack"
-                ></textarea>
-              </div>
-              <div class="footerInput">
-                <p>Email Address (optional)</p>
-                <input type="email" placeholder="example@gmail.com" />
-              </div>
-              <div class="footerInput">
-                <p>Employee's Full Name</p>
-                <input type="text" placeholder="Juan Dela Cruz" />
-              </div>
-            </div>
-          </div>
-          <div class="submitbtn">
-            <button>Submit</button>
-            <h1>THANK YOU!</h1>
-          </div>
-        </div>
+          <button onclick="pdfViewer.showModal()">Submit Feedback</button>
+          <h1>THANK YOU!</h1>
+        </footer>
+          <dialog id="pdfViewer">
+            <embed src="assets/Feedback Form (Fillable).pdf" type="">
+            </dialog>
+        
       </section>
     </main>
 
